force-app/main/default/objects/FEC_CS_Campaign__c/FEC_CS_Campaign__c.object-meta.xml
<CustomObject>
    <label>CS Campaign</label>
    <nameField>
        <label>CS Campaign Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CS Campaigns</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>