force-app/main/default/objects/FEC_CS_Campaign__c/fields/FEC_Campaign__c.field-meta.xml
<CustomField>
    <fullName>FEC_Campaign__c</fullName>
    <label>FEC Campaign</label>
    <referenceTo>FEC_Campaign__c</referenceTo>
    <relationshipLabel>CS Campaigns</relationshipLabel>
    <relationshipName>CS_Campaigns</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>