force-app/main/default/objects/FEC_CS_Campaign__c/fields/FEC_PushInstant__c.field-meta.xml
<CustomField>
    <fullName>FEC_PushInstant__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Push Instant</label>
    <type>Checkbox</type>
</CustomField>