force-app/main/default/objects/FEC_CS_Campaign__c/fields/FEC_RecordLifeTime__c.field-meta.xml
<CustomField>
    <fullName>FEC_RecordLifeTime__c</fullName>
    <label>RecordLifeTime</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>