force-app/main/default/objects/FEC_CS_Campaign__c/fields/FEC_SaturdaySchedule__c.field-meta.xml
<CustomField>
    <fullName>FEC_SaturdaySchedule__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Saturday Schedule</label>
    <type>Checkbox</type>
</CustomField>