force-app/main/default/objects/FEC_CS_Campaign__c/fields/FEC_ScheduleCampaign__c.field-meta.xml
<CustomField>
    <fullName>FEC_ScheduleCampaign__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Schedule Campaign</label>
    <type>Checkbox</type>
</CustomField>