force-app/main/default/objects/FEC_CS_Campaign__c/fields/FEC_SundaySchedule__c.field-meta.xml
<CustomField>
    <fullName>FEC_SundaySchedule__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sunday Schedule</label>
    <type>Checkbox</type>
</CustomField>